# OpenCV4Android

./: README.md  build.gradle  settings.gradle
15-puzzle/: build.gradle
15-puzzle/src/main/: AndroidManifest.xml
15-puzzle/src/main/java/org/opencv/samples/puzzle15/: Puzzle15Activity.java
camera-calibration/: .gitignore  build.gradle
camera-calibration/src/main/: AndroidManifest.xml
camera-calibration/src/main/java/org/opencv/samples/cameracalibration/: CalibrationResult.java  CameraCalibrator.java
color-blob-detection/: build.gradle
color-blob-detection/src/main/: AndroidManifest.xml
face-detection/: CMakeLists.txt  build.gradle
face-detection/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
image-manipulations/: build.gradle
image-manipulations/src/main/: AndroidManifest.xml
image-manipulations/src/main/java/org/opencv/samples/imagemanipulations/: ImageManipulationsActivity.java
opencv/: build.gradle
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/include/opencv2/: cvconfig.h
opencv/src/main/java/org/opencv/android/: Camera2Renderer.java
tutorial-1-camerapreview/src/main/: AndroidManifest.xml
tutorial-2-mixedprocessing/src/main/: AndroidManifest.xml
tutorial-3-cameracontrol/src/main/: AndroidManifest.xml
